[package]
name = "sysinfo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sysinfo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
libc = "0.2.152"
sysinfo = "0.30.5"
